--- a/index.html
+++ b/index.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Metadata and links -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <!-- Link to external CSS file -->
     <title>Jeopardy</title>
+    <!-- Title of the web page -->
   </head>
   <body class="flex-container">
+    <!-- Header section of the page -->
     <header>
       <div class="game-title">
         <h1>Welcome to Jeopardy!</h1>
+        <!-- Main title displayed in the header -->
       </div>
     </header>
+    <!-- Main content area -->
     <main class="flex-grid">
+      <!-- Section for displaying the Jeopardy logo -->
       <div class="jeopardy-logo">
         <img
           src="https://on-camera-audiences.com/shows/Jeopardy/img"
           alt="Jeopardy Logo"
-        />
+        /><!-- Jeopardy logo image -->
       </div>
+      <!-- Container for the play button -->
       <div class="play-button-container">
         <button class="play-button">
           <a href="round-1.html">Play</a>
+          <!-- Link to start the game, leading to round 1 -->
         </button>
       </div>
     </main>
+    <!-- Footer section of the page -->
     <footer>
       <p>Jeopardy Copyright &copy; 2023</p>
+      <!-- Copyright notice -->
     </footer>
+    <!-- Script tag for JavaScript -->
     <!-- Do not change the script source. Allows import/export to work. -->
     <script src="./scripts/index.js" type="module"></script>
+    <!-- Link to external JavaScript file -->
   </body>
 </html>
